# NZP-T4

./: .editorconfig  .gitignore  CONTRIBUTING.md  CURRENT_STATUS.md  PROJECT_PROCESS.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  compatibility_report.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  compatibility_report.yml
.github/workflows/: ci.yml
docs/: ANDROID_BASELINE.md  ARCHITECTURE.md  COMPATIBILITY_REPORT.md  CONTENT_POLICY.md  LINUX_DESKTOP_BASELINE.md  REPOSITORY_LAYOUT.md  UPSTREAM.md
schemas/: compatibility-report.schema.json
src/nzp_t4_inspector/: __init__.py  cli.py  inspector.py  models.py  rules.py
tests/: test_inspector.py  test_schema_shape.py
tests/fixtures/original-inspector-fixture/: PROVENANCE.md
tests/fixtures/original-inspector-fixture/metadata/: fixture.csv
tests/fixtures/original-inspector-fixture/scripts/: example.gsc
tools/: check-project.sh
upstream/: README.md  components.toml
