[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nzp-t4-inspector"
version = "0.1.0"
description = "Read-only package inspector for the NZ:P T4 compatibility project"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-2.0-only" }
authors = [{ name = "CyberShonk" }]
dependencies = []
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Games/Entertainment",
  "Topic :: Security",
]

[project.scripts]
nzp-t4-inspect = "nzp_t4_inspector.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
